✨ 引入MybatisPlus及Lombok提升开发效率

--- a/hello-admin/src/main/resources/application-dev.yaml
+++ b/hello-admin/src/main/resources/application-dev.yaml
@@ -12,7 +12,7 @@ spring:
 
 logging:
   group:
-    mybatis: "org.mybatis.spring,plus.jqm.hello.admin.mapper"
+    mybatis: "plus.jqm.hello.admin.mapper"
   level:
     mybatis: debug
 
