✨ 新增身份认证模块-引入 Sa-Token ✨ 新增 RPC 模块-封装 RestClient 🔧 变更模块名称hello-admin->hello-system

--- a/hello-common/pom.xml
+++ b/hello-common/pom.xml
@@ -14,5 +14,8 @@
 
     <modules>
         <module>hello-common-core</module>
+        <module>hello-common-sa-token</module>
+        <module>hello-common-http-service</module>
+        <module>hello-common-api</module>
     </modules>
 </project>
