--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,10 @@
     </parent>
 
     <modules>
-        <module>hello-admin</module>
+        <module>hello-system</module>
         <module>hello-common</module>
         <module>hello-gateway</module>
+        <module>hello-auth</module>
     </modules>
 
     <properties>
@@ -32,6 +33,7 @@
         <hutool.version>5.8.27</hutool.version>
         <spring-cloud.version>2023.0.1</spring-cloud.version>
         <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
+        <sa-token.version>1.37.0</sa-token.version>
         <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
     </properties>
 
@@ -74,8 +76,43 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-spring-boot3-starter</artifactId>
+                <version>${sa-token.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-reactor-spring-boot3-starter</artifactId>
+                <version>${sa-token.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-redis-jackson</artifactId>
+                <version>${sa-token.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-jwt</artifactId>
+                <version>${sa-token.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>plus.jqm.hello</groupId>
                 <artifactId>hello-common-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>plus.jqm.hello</groupId>
+                <artifactId>hello-common-sa-token</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>plus.jqm.hello</groupId>
+                <artifactId>hello-common-http-service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>plus.jqm.hello</groupId>
+                <artifactId>hello-common-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
